testing if background image will display correctly on iphone

--- a/main.css
+++ b/main.css
@@ -109,6 +109,21 @@ body {
     margin-left: 250px; */
 }
 
+#section1:after{
+    content:"";
+    position:fixed; /* stretch a fixed position to the whole screen */
+    top:0;
+    height:95vh; /* fix for mobile browser address bar appearing disappearing */
+    left:0;
+    right:0;
+    z-index:-1; /* needed to keep in the background */
+    background: url("pics/calebPlayingGuitar1.jpg") center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .section1row {
     height: 25%;
     width: 100%;
